# LAVI

./: ABBA.m  General_SigLims.m  LAVI_main.m  LAVI_walk_through.m  LAVI_walk_through.mlx  Prepare_LAVI.m  Pwelch2amplitude.m  README.md  computePinkLAVI.m  compute_lavi.m  data.mat  dispRMVprev.m  getFrequenciesOfFFT.m  get_AP_of_Power.m  get_pink_iafft_coefs_pow.m  get_pink_iafft_coefs_random_ap.m  iaaft_loop_1d.m  pwelchNaN.m  tfrLight.m  waveletLight.m
matlab/: Bursts_detection_WTPL_v1_0_0.m  General_SigLims.m  LAVI_walk_through.mlx  Prepare_LAVI.m  Pwelch2amplitude.m  README.md  WTPL_burst_durations_v2.m  computePinkLAVI.m  compute_lavi.m  fit_GK.m  getFreqSpan.m  getFrequenciesOfFFT.m  get_burst_durations.m  get_pink_iafft_coefs_pow.m  showCurrnetTime.m  waveletLight.m
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/data/: SIGLIM.mat  SIGLIM2.mat  matlab_lavi_abba_results.mat  matlab_lavi_results.mat  matlab_validation_outputs.mat  meg_data.mat  python_lavi_abba_results.mat  python_lavi_pink.mat  python_lavi_results.mat  python_validation_abba_outputs.mat  python_validation_outputs.mat  python_validation_pink_outputs.mat
python/examples/: LAVI_walkthrough.ipynb  LAVI_walkthrough_validation.m  LAVI_with_MNE.m  LAVI_with_mne.ipynb
python/lavi/: __init__.py  abba.py  burst_helpers.py  bursts.py  core.py  io.py  plotting.py  spectra.py  statistics.py  surrogates.py  validation.py  wavelets.py
python/tests/: test_smoke.py
